new changes like testdb new readme new scripts

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Your existing variables
 TMDB_API_KEY=2f989f1d25d07797d5b10651532cd323
-POSTGRES_USER=movie_user
-POSTGRES_PASSWORD=movie_password
-POSTGRES_DB=movie_database
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=movie_db
 
 # New variables for database setup
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_SUPERUSER=postgres
 POSTGRES_SUPERUSER_PASSWORD=root
